[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Element/Element.gd" type="Script" id=1]

[node name="Element" type="MarginContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 10
custom_constants/margin_left = 10
script = ExtResource( 1 )
_sections_unfolded = [ "Visibility", "custom_constants" ]

[node name="HBoxContainer" type="HBoxContainer" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_right = 490.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="MarginContainer1" type="MarginContainer" parent="HBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 117.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
_sections_unfolded = [ "Focus", "Grow Direction", "Hint", "Mouse", "Rect", "Size Flags", "Theme", "custom_constants" ]

[node name="SrcTexture" type="TextureRect" parent="HBoxContainer/MarginContainer1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 5.0
margin_right = 112.0
margin_bottom = 95.0
rect_min_size = Vector2( 90, 90 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 7
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Rect", "Size Flags", "Theme", "Visibility" ]

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 121.0
margin_right = 238.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
_sections_unfolded = [ "Focus", "Grow Direction", "Hint", "Mouse", "Rect", "Size Flags", "Theme", "custom_constants" ]

[node name="DstTop" type="TextureRect" parent="HBoxContainer/MarginContainer2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 5.0
margin_right = 112.0
margin_bottom = 95.0
rect_min_size = Vector2( 90, 90 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 5
_sections_unfolded = [ "Rect" ]

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 242.0
margin_right = 359.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
_sections_unfolded = [ "Focus", "Grow Direction", "Hint", "Mouse", "Rect", "Size Flags", "Theme", "custom_constants" ]

[node name="DstLeft" type="TextureRect" parent="HBoxContainer/MarginContainer3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 5.0
margin_right = 112.0
margin_bottom = 95.0
rect_min_size = Vector2( 90, 90 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 5
_sections_unfolded = [ "Rect" ]

[node name="MarginContainer4" type="MarginContainer" parent="HBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 363.0
margin_right = 480.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
_sections_unfolded = [ "Focus", "Grow Direction", "Hint", "Mouse", "Rect", "Size Flags", "Theme", "custom_constants" ]

[node name="DstRight" type="TextureRect" parent="HBoxContainer/MarginContainer4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 5.0
margin_right = 112.0
margin_bottom = 95.0
rect_min_size = Vector2( 90, 90 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 5
_sections_unfolded = [ "Rect" ]


